data/derived/comb/progs/unify/prog1143.ml.out
Characters 46-47:
  let base = 3**2 in
             ^
Error: This expression has type int but an expression was expected of type
         float
